@@ -1,5 +1,8 @@
 package org.checkerframework.framework.type;
 
+import org.checkerframework.checker.calledmethods.qual.EnsuresCalledMethods;
+import org.checkerframework.checker.mustcall.qual.InheritableMustCall;
+import org.checkerframework.checker.mustcall.qual.Owning;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.checkerframework.checker.signature.qual.BinaryName;
 import org.checkerframework.checker.signature.qual.DotSeparatedIdentifiers;
@@ -20,6 +23,8 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Target;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
@@ -63,6 +68,11 @@ import javax.tools.Diagnostic.Kind;
  * #isSupportedAnnotationClass(Class)}. See {@code
  * org.checkerframework.checker.units.UnitsAnnotationClassLoader} for an example.
  */
+@SuppressWarnings(
+        "mustcall:inconsistent.mustcall.subtype" // No need to check that AnnotationClassLoaders are
+// closed. (Just one is created per type factory.)
+)
+@InheritableMustCall({})
 public class AnnotationClassLoader implements Closeable {
     /** For issuing errors to the user. */
     protected final BaseTypeChecker checker;
@@ -99,7 +109,8 @@ public class AnnotationClassLoader implements Closeable {
     private final URL resourceURL;
 
     /** The class loader used to load annotation classes. */
-    protected final URLClassLoader classLoader;
+    @SuppressWarnings("builder:required.method.not.called") // this class is @MustCall({})
+    protected final @Owning URLClassLoader classLoader;
 
     /**
      * The annotation classes bundled with a checker (located in its qual directory) that are deemed
@@ -173,6 +184,7 @@ public class AnnotationClassLoader implements Closeable {
         loadBundledAnnotationClasses();
     }
 
+    @EnsuresCalledMethods(value = "classLoader", methods = "close")
     @Override
     public void close() {
         try {
@@ -393,8 +405,8 @@ public class AnnotationClassLoader implements Closeable {
         URL jarURL = null;
 
         try {
-            jarURL = new URL("jar:file:" + absolutePathToJarFile + "!/");
-        } catch (MalformedURLException e) {
+            jarURL = new URI("jar:file:" + absolutePathToJarFile + "!/").toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             processingEnv
                     .getMessager()
                     .printMessage(Kind.NOTE, "Jar URL " + absolutePathToJarFile + " is malformed");
